Tweak the fonts and other styles a bit.

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -1,3 +1,7 @@
+// Base RGB on paletton.com: FB5A00
+// These variables override Bulma variables.
 $body-background-color: #FF975D;
 $primary: #83E554;
 $info: #F25876;
+$body-size: 14px;
+$body-family: 'Open Sans', serif;
